packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/method_not_found3.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "Employee" 8 0x00 ())
(record 6 0x00 ())
({ 1 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(= 1 0x00 ())
(string, """" 2 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "interopWithRecordReturn" 23 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(boolean 7 0x00 ())
({ 1 0x00 ())
(string 6 0x00 ())
(ident, "newVal" 6 0x00 ())
(= 1 0x00 ())
(string, ""new name"" 10 0x00 ())
(; 1 0x00 ())
(ident, "Employee" 8 0x00 ())
(ident, "p" 1 0x00 ())
(= 1 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""name begin"" 12 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(ident, "Employee" 8 0x00 ())
(ident, "a" 1 0x00 ())
(= 1 0x00 ())
(ident, "acceptRecordAndRecordReturn" 27 0x00 ())
(( 1 0x00 ())
(ident, "p" 1 0x00 ())
(, 1 0x00 ())
(int, "45" 2 0x00 ())
(, 1 0x00 ())
(ident, "newVal" 6 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(if 2 0x00 ())
(( 1 0x00 ())
(ident, "a" 1 0x00 ())
(. 1 0x00 ())
(ident, "name" 4 0x00 ())
(!= 2 0x00 ())
(ident, "newVal" 6 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(false 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(if 2 0x00 ())
(( 1 0x00 ())
(ident, "p" 1 0x00 ())
(. 1 0x00 ())
(ident, "name" 4 0x00 ())
(!= 2 0x00 ())
(ident, "newVal" 6 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(false 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(return 6 0x00 ())
(true 4 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "acceptRecordAndRecordReturn" 27 0x00 ())
(( 1 0x00 ())
(ident, "Employee" 8 0x00 ())
(ident, "e" 1 0x00 ())
(, 1 0x00 ())
(int 3 0x00 ())
(ident, "a" 1 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "newVal" 6 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(ident, "Employee" 8 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"" 54 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
